<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Be careful of medicine</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="cellphone">Cellphone</string>
    <string name="birthday">birthday</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="rigister">Rigister</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="medicalAlert">medicalAlert</string>
    <string name="medicalRecord">medicalRecord</string>
    <string name="urgentHelp">urgentHelp</string>
    <string name="medicalInformation">medicalInformation</string>
    <string name="myFavourite">myFavourite</string>

</resources>