<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="fill_parent">

            <TextView
                android:text="@string/rigister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/memberRigister"
                android:padding="10dp"
                android:textColor="@color/bg_login"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:maxLines="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:maxLines="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:maxLines="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/cellphone"
                android:textColor="@color/input_register_hint"
                android:background="@color/white"
                android:padding="10dp"
                android:maxLines="1"
                android:hint="@string/cellphone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBirthday"
                android:padding="10dp"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/bg_login" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dpBirthday"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                tools:ignore="UnusedAttribute"
                android:startYear="1980" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sex"
                android:orientation="horizontal"
                android:paddingLeft="80dp"
                android:paddingRight="80dp">

                <RadioButton
                    android:text="@string/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/woman"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/man"
                    android:layout_weight="0.5"
                    android:padding="10dp" />

            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/bg_login"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/bg_login"
                android:textSize="15dp"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>